First stable version of index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="css/superslides.css" rel="stylesheet"  type="text/css">
@@ -13,6 +13,7 @@
     <script src="js/index.js"></script>
 
     <link href="css/index.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
   <body>
@@ -36,9 +37,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle vt-p" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#" class="vt-p">Add project</a></li>
+                <li><a href="#" class="vt-p"><i class="fa fa-plus-circle"></i> Add project</a></li>
                 <li class="divider"></li>
-                <li><a href="#" class="vt-p">Apply for a project</a></li>
+                <li><a href="#" class="vt-p"><i class="fa fa-check-circle"></i> Apply for a project</a></li>
               </ul>
             </li>
           </ul>
@@ -64,7 +65,7 @@
             <div class="container">
               <h1 class="caption">Language tutor</h1>
               <div class="contrast">
-                <p>Learn new languages quickly and free.</p>
+                <h4>Learn new languages quickly and free.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -74,7 +75,7 @@
             <div class="container">
               <h1 class="caption">TeamBaker</h1>
               <div class="contrast">
-                <p>Find a project of your dream. Or let everyone know about your's.</p>
+                <h4>Find a project of your dream. Or let everyone know about your's.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -84,7 +85,7 @@
             <div class="container">
               <h1 class="caption">Call of Duty Ember</h1>
               <div class="contrast">
-                <p>Brand new episode of the real-time first-person shooter.</p>
+                <h4>Brand new episode of the real-time first-person shooter.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -94,7 +95,7 @@
             <div class="container">
               <h1 class="caption">PlayTune</h1>
               <div class="contrast">
-                <p>Listen to music that fits your current mood.</p>
+                <h4>Listen to music that fits your current mood.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -104,7 +105,7 @@
             <div class="container">
               <h1 class="caption">Skyscrapers</h1>
               <div class="contrast">
-                <p>Some lorem ipsum stuff.</p>
+                <h4>Some lorem ipsum stuff.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -114,7 +115,7 @@
             <div class="container">
               <h1 class="caption">Picturesque picture</h1>
               <div class="contrast">
-                <p>Some lorem ipsum stuff here.</p>
+                <h4>Some lorem ipsum stuff here.</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -124,7 +125,7 @@
             <div class="container">
               <h1 class="caption">Cityscape</h1>
               <div class="contrast">
-                <p>It's New York, babe :)</p>
+                <h4>It's New York, babe :)</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -134,7 +135,7 @@
             <div class="container">
               <h1 class="caption">Night shot</h1>
               <div class="contrast">
-                <p>Nicely done with focus</p>
+                <h4>Nicely done with focus</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -144,7 +145,7 @@
             <div class="container">
               <h1 class="caption">Black Cat</h1>
               <div class="contrast">
-                <p>The last slide... Rly :)</p>
+                <h4>The last slide... Rly :)</h4>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -251,9 +252,10 @@
       <div class="list-group">
         <div class="form-group">
           <div class="input-group">
-            <input class="form-control input-sm" type="text" id="inputSmall">
+            <input class="form-control input-sm xs-input" type="text" id="inputSmall">
             <span class="input-group-btn">
-              <button class="btn btn-info btn-sm" type="button">Search</button>
+              <a href="#" class="button line-green small square">Search</a>
+              <!--<button class="btn btn-info btn-sm" type="button">Search</button>-->
             </span>
           </div>
         </div>
@@ -274,7 +276,7 @@
       </div>
     </div>
     <div class="panels">
-        <div class="panel panel-warning col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+        <div class="panel panel-warning col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
             <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
           </div>
@@ -318,7 +320,7 @@
             </div>
           </div>
         </div>
-        <div class="panel panel-primary col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+        <div class="panel panel-primary col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
             <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
           </div>
@@ -362,7 +364,7 @@
             </div>
           </div>
         </div>
-          <div class="panel panel-info col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+          <div class="panel panel-info col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
             </div>
@@ -406,7 +408,7 @@
               </div>
             </div>
           </div>
-          <div class="panel panel-danger col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+          <div class="panel panel-danger col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">PlayTune</a></h3>
             </div>
@@ -451,7 +453,7 @@
             </div>
           </div>
 
-          <div class="panel panel-info col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+          <div class="panel panel-info col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
             </div>
@@ -497,7 +499,7 @@
           </div>
 
 
-          <div class="panel panel-danger col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+          <div class="panel panel-danger col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">PlayTune</a></h3>
             </div>
@@ -541,7 +543,7 @@
               </div>
             </div>
           </div>
-          <div class="panel panel-primary col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+          <div class="panel panel-primary col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
             </div>
@@ -586,7 +588,7 @@
             </div>
           </div>
 
-            <div class="panel panel-warning col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
+            <div class="panel panel-warning col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
                 <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
               </div>
@@ -632,6 +634,9 @@
             </div>
 
     </div>
+    <div class="btn-load">
+      <a href="#" class="button line-green square large">Load more <i class="fa fa-arrow-down"></i></a>
+    </div>
 
   </div>
 
@@ -640,7 +645,7 @@
         <div class="container footer-container">
             <div class="row footer-row">
                 <div class="col-lg-12 footer-content">
-                  <div class="col-xs-6 col-sm-3 col-md-3">
+                  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
                     <ul class="social_list">
                       <li class="social-header">Follow us on:</li>
                       <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
@@ -648,16 +653,16 @@
                       <li class="social_btn"><a href="#"><span class="icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
                     </ul>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-4 col-md-5 col-lg-7">
 
                   </div>
-                  <div class="col-xs-6 col-sm-3 col-md-3">
+                  <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
                     <p class="subscription-header">Let's get in touch</p>
                     <div class="form-group subscription">
                       <div class="input-group">
-                        <input class="form-control input-sm" type="text" id="inputSmall">
+                        <input class="form-control input-sm xs-input" type="text" id="inputSmall">
                         <span class="input-group-btn">
-                          <button class="btn btn-info btn-sm" type="button">Subscribe</button>
+                          <a href="#" class="button line-green small square">Subscribe</a>
                         </span>
                       </div>
                     </div>
@@ -666,11 +671,11 @@
                 <div class="col-lg-12 copyrights">
                   <ul class="list-inline">
                       <li>
-                          <a href="#">Add Project</a>
+                          <a href="#"><i class="fa fa-plus-circle"></i> Add Project</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
-                          <a href="#about">Apply for a project</a>
+                          <a href="#about"><i class="fa fa-check-circle"></i> Apply for a project</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
