--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="auth" href="#signin" class="vt-p">Sign in</a></li>
+            <li><a href="#about" class="vt-p">About</a></li>
+            <li><a class="auth" href="#signin" class="vt-p">Sign in</a></li>
           </ul>
         </div>
       </div>
@@ -249,7 +250,7 @@
   <div class="row main-content">
     <div class="menu-top">
       <div class="list-group">
-        <div class="form-group">
+        <div class="form-group search-group">
           <div class="input-group">
             <input class="form-control input-sm xs-input" type="text" id="inputSmall">
             <span class="input-group-btn">
@@ -679,20 +680,21 @@
                 <div class="col-lg-12 copyrights">
                   <ul class="list-inline">
                       <li>
-                          <a href="#"><i class="fa fa-plus-circle"></i> Add Project</a>
+                          <a href="#add"><i class="fa fa-plus-circle"></i> Add Project</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
-                          <a href="#about"><i class="fa fa-check-circle"></i> Apply for a project</a>
+                          <a href="#apply"><i class="fa fa-check-circle"></i> Apply for a project</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
-                          <a href="#services">Sign in</a>
+                        <a href="#about">About</a>
                       </li>
                       <li class="footer-menu-divider">&sdot;</li>
                       <li>
-                        <a href="#top">Sign up</a>
+                          <a class="auth" href="#signin" class="vt-p">Sign in</a>
                       </li>
+
                   </ul>
                   <p class="copyright text-muted small">Copyright &copy; Daniel Vasylenko 2015. All Rights Reserved</p>
                 </div>
