--- a/index.html
+++ b/index.html
@@ -654,18 +654,18 @@
         <div class="container footer-container">
             <div class="row footer-row">
                 <div class="col-lg-12 footer-content">
-                  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 social-sector">
                     <ul class="social_list">
                       <li class="social-header">Follow us on:</li>
-                      <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
-                      <li class="social_btn"><a href="#"><span class="icon google"><i class="fa fa-google-plus"></i></span></a></li>
-                      <li class="social_btn"><a href="#"><span class="icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
+                      <li class="social_btn"><a href="#"><span class="social-icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
+                      <li class="social_btn"><a href="#"><span class="social-icon google"><i class="fa fa-google-plus"></i></span></a></li>
+                      <li class="social_btn"><a href="#"><span class="social-icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
                     </ul>
                   </div>
                   <div class="col-sm-4 col-md-5 col-lg-7">
 
                   </div>
-                  <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
+                  <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 subscr-sector">
                     <p class="subscription-header">Let's get in touch</p>
                     <div class="form-group subscription">
                       <div class="input-group">
