--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script id="webplate-stack" src="webplate/stack.js"></script>
     <script src="js/readmore.min.js"></script>
+    <link rel="stylesheet" href="css/animate.css" type="text/css">
     <script src="js/index.js"></script>
 
     <link href="css/index.css" rel="stylesheet" type="text/css">
