Created profile.html, set basic page structure

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <div class="panels">
         <div class="panel panel-art col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
-            <h3 class="panel-title"><a href="#">Sample art panel</a></h3>
+            <h3 class="panel-title"><a href="html/project.html">Sample art panel</a></h3>
           </div>
           <div class="panel-body">
             <div class="image-container">
@@ -323,7 +323,7 @@
         </div>
         <div class="panel panel-dance col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
-            <h3 class="panel-title"><a href="#">Sample dance panel</a></h3>
+            <h3 class="panel-title"><a href="html/project.html">Sample dance panel</a></h3>
           </div>
           <div class="panel-body">
             <div class="image-container">
@@ -367,7 +367,7 @@
         </div>
           <div class="panel panel-design col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
-              <h3 class="panel-title"><a href="#">Sample design panel</a></h3>
+              <h3 class="panel-title"><a href="html/project.html">Sample design panel</a></h3>
             </div>
             <div class="panel-body">
               <div class="image-container">
@@ -414,7 +414,7 @@
           </div>
           <div class="panel panel-filmAndVideo col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
-              <h3 class="panel-title"><a href="#">Sample film & video panel</a></h3>
+              <h3 class="panel-title"><a href="html/project.html">Sample film & video panel</a></h3>
             </div>
             <div class="panel-body">
               <div class="image-container">
@@ -462,7 +462,7 @@
 
           <div class="panel panel-games col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
-              <h3 class="panel-title"><a href="#">Sample games panel</a></h3>
+              <h3 class="panel-title"><a href="html/project.html">Sample games panel</a></h3>
             </div>
             <div class="panel-body">
               <div class="image-container">
@@ -511,7 +511,7 @@
 
           <div class="panel panel-it col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
-              <h3 class="panel-title"><a href="#">Sample IT panel</a></h3>
+              <h3 class="panel-title"><a href="html/project.html">Sample IT panel</a></h3>
             </div>
             <div class="panel-body">
               <div class="image-container">
@@ -558,7 +558,7 @@
           </div>
           <div class="panel panel-journalism col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
-              <h3 class="panel-title"><a href="#">Sample journalism panel</a></h3>
+              <h3 class="panel-title"><a href="html/project.html">Sample journalism panel</a></h3>
             </div>
             <div class="panel-body">
               <div class="image-container">
@@ -603,7 +603,7 @@
 
             <div class="panel panel-music col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="#">Sample music panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample music panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -651,7 +651,7 @@
 
             <div class="panel panel-photography col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="#">Sample photography panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample photography panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -693,7 +693,7 @@
 
             <div class="panel panel-publishing col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="#">Sample publishing panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample publishing panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -735,7 +735,7 @@
 
             <div class="panel panel-technology col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="#">Sample technology panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample technology panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
@@ -780,7 +780,7 @@
 
             <div class="panel panel-other col-sm-5 col-md-4 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
-                <h3 class="panel-title"><a href="#">Sample other panel</a></h3>
+                <h3 class="panel-title"><a href="html/project.html">Sample other panel</a></h3>
               </div>
               <div class="panel-body">
                 <div class="image-container">
