Basic project info page structure

--- a/html/project.html
+++ b/html/project.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default affix" id="nav">
+    <nav style="display:none;" class="navbar navbar-default affix" id="nav">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -43,17 +43,54 @@
         </div>
       </div>
     </nav>
-    <div class="content-wrapper">
-      <div class="leftPart col-xs-12 col-sm-4">
+    <div class="row content-wrapper">
+      <div class="leftPart col-xs-12 col-sm-5 col-md-4">
+        <div class="profile-image">
+          <a href="#image"><img src="../img/proj_img-3.jpg"/></a>
+        </div>
+        <div class="author-name">
+        </div>
+        <div class="user-action-buttons">
+        </div>
+        <div class="team-header">
+        </div>
+        <div class="team-specs">
+          <p>0/3</p>
+        </div>
       </div>
-      <div class="rightPart col-xs-12 col-sm-8">
+      <div class="rightPart col-xs-12 col-sm-7 col-md-8">
+        <div class="project-name">
+          Project name
+        </div>
+        <div class="project-info">
+          <div class="basic-info">
+            <p>Category:</p>
+            <p>Land:</p>
+            <p>Type:</p>
+            <p>Field:</p>
+            <p>Time GMT:</p>
+            <p>Description:</p>
+
+            <div class="attachments">
+            </div>
+            <div class="links">
+            </div>
+            <div class="media">
+            </div>
+            <p>Release date:</p>
+            <p>Progress bar</p>
+          </div>
+        </div>
+        <div class="comments">
+        </div>
       </div>
     </div>
 
-    <div class="footer col-xs-12">
+    <footer>
+      <div class="footer col-xs-12">
 
-    </div>
-
+      </div>
+    </footer>
 
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
