Left side of project page basic structure

--- a/html/project.html
+++ b/html/project.html
@@ -49,13 +49,48 @@
           <a href="#image"><img src="../img/proj_img-3.jpg"/></a>
         </div>
         <div class="author-name">
+          John Doe
         </div>
         <div class="user-action-buttons">
+          <div class="btn-follow"><a href="#" class="button line-blue">Follow</a></div>
+          <ul class="action-buttons">
+            <li>
+              <a href="#likes"><i class="fa fa-heart fa-2x"></i></a>
+              <p>20</p>
+            </li>
+            <li>
+              <a href="#favorite"><i class="fa fa-star fa-2x"></i></a>
+              <p>35</p>
+            </li>
+            <li>
+              <a href="#views"><i class="fa fa-eye fa-2x"></i></a>
+              <p>50</p>
+            </li>
+          </ul>
         </div>
         <div class="team-header">
+          Team
         </div>
         <div class="team-specs">
-          <p>0/3</p>
+          <div class="spec">
+            <div class="spec-container">
+              <a href="#" class="button aqua pill spec-name">Test Speciality 1</a>
+              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+            </div>
+          </div>
+          <div class="spec">
+            <div class="spec-container">
+              <a href="#" class="button aqua pill spec-name">Test Speciality 2</a>
+              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+            </div>
+          </div>
+          <div class="spec">
+            <div class="spec-container">
+              <a href="#" class="button aqua pill spec-name">Test Speciality 3</a>
+              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+            </div>
+          </div>
+          <p class="team-count">0/3</p>
         </div>
       </div>
       <div class="rightPart col-xs-12 col-sm-7 col-md-8">
