--- a/html/project.html
+++ b/html/project.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav style="display:none;" class="navbar navbar-default affix" id="nav">
+    <nav class="navbar navbar-default affix" id="nav">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -99,33 +99,85 @@
         </div>
         <div class="project-info">
           <div class="basic-info">
-            <p>Category:</p>
-            <p>Land:</p>
-            <p>Type:</p>
-            <p>Field:</p>
-            <p>Time GMT:</p>
-            <p>Description:</p>
-
+            <div class="info">
+              <p>Category:</p><span> IT </span>
+            </div>
+            <div class="info">
+              <p>Land:</p><span> UK </span>
+            </div>
+            <div class="info">
+              <p>Type:</p><span> Web application </span>
+            </div>
+            <div class="info">
+              <p>Field:</p><span> Web development </span>
+            </div>
+            <div class="info">
+              <p>Description:</p><span> A new web application for an existing web site. </span>
+            </div>
+            <div class="info">
+              <p>Release date:</p><span>  Aug. 22, 2015 </span>
+            </div>
+          </div>
+          <div class="additional-info">
             <div class="attachments">
+              Attachments
+              <hr>
+              <ul class="attachments-list">
+                <li class="attachment">
+                  <a href="#attachment">Tz.docx <i class="fa fa-download"></i></a>
+                </li>
+                <li class="attachment">
+                  <a href="#attachment">Business_plan <i class="fa fa-download"></i></a>
+                </li>
+              </ul>
             </div>
             <div class="links">
+              Links
+              <hr>
+              <ul class="links-list">
+                <li class="link">
+                  <a href="#link"><i class="fa fa-link"></i> https://github.com/</a>
+                </li>
+                <li class="link">
+                  <a href="#link"><i class="fa fa-link"></i> https://facebook.com/</a>
+                </li>
+              </ul>
             </div>
             <div class="media">
+              Media
+              <hr>
+              <ul class="media-list">
+                <li class="media">
+                  <a href="#media">
+                    <img src="../img/proj_img-4.jpg"></img>
+                    <p>Models</p>
+                  </a>
+                </li>
+                <li class="media">
+                  <a href="#media">
+                    <img src="../img/proj_img-1.jpg"></img>
+                    <p>Diagram</p>
+                  </a>
+                </li>
+              </ul>
             </div>
-            <p>Release date:</p>
-            <p>Progress bar</p>
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" style="width: 40%"></div>
+            </div>
+            </div>
+
           </div>
         </div>
         <div class="comments">
         </div>
       </div>
     </div>
-
     <footer>
       <div class="footer col-xs-12">
 
       </div>
     </footer>
+
 
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
